force-app/main/default/objects/event/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <label>Meeting Notes</label>
    <length>3000</length>
    <type>TextArea</type>
    <visibilityPublic</visibilityPublic>
</CustomField>